--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "typescript": "^5.8.2"
-  },
-  "dependencies": {
-    "axios": "^1.8.4",
-    "glob": "^11.0.1"
+    "@types/express": "^5.0.1",
+    "@types/mysql": "^2.15.27",
+    "cheerio": "^1.0.0",
+    "express": "^5.1.0",
+    "jquery": "^3.7.1",
+    "mysql2": "^3.14.0",
+    "nodemon": "^3.1.9",
+    "typescript": "^5.8.3"
   }
 }
