--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "devDependencies": {
+    "@tsconfig/strictest": "^2.0.5",
     "@types/express": "^5.0.1",
+    "@types/multer": "^1.4.12",
     "@types/mysql": "^2.15.27",
     "cheerio": "^1.0.0",
     "express": "^5.1.0",
@@ -26,5 +30,9 @@
     "mysql2": "^3.14.0",
     "nodemon": "^3.1.9",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "multer": "^1.4.5-lts.2",
+    "zod": "^3.25.28"
   }
 }
