--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rimraf dist",
     "build": "tsc",
     "start": "node dist/index.js"
   },
@@ -29,9 +30,11 @@
     "jquery": "^3.7.1",
     "mysql2": "^3.14.0",
     "nodemon": "^3.1.9",
+    "rimraf": "^6.0.1",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "multer": "^1.4.5-lts.2",
     "zod": "^3.25.28"
   }
