--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@types/pg": "^8.15.4",
     "dotenv": "^16.5.0",
     "multer": "^1.4.5-lts.2",
+    "pg": "^8.16.3",
     "zod": "^3.25.28"
   }
 }
